--- a/Labs/Labs.csproj
+++ b/Labs/Labs.csproj
@@ -7,4 +7,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Lab1\Lab1.csproj" />
+  </ItemGroup>
+
 </Project>
