--- a/Lab3/Lab3.DAL.csproj
+++ b/Lab3/Lab3.DAL.csproj
@@ -71,19 +71,24 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Entities\Category.cs" />
-    <Compile Include="Entities\Order.cs" />
-    <Compile Include="Entities\Room.cs" />
-    <Compile Include="Entities\State.cs" />
-    <Compile Include="Entities\User.cs" />
+    <Compile Include="Entities\Abstract\BaseEntity.cs" />
+    <Compile Include="Entities\Abstract\IBaseEntity.cs" />
+    <Compile Include="Entities\Enums\Category.cs" />
+    <Compile Include="Entities\OrderEntity.cs" />
+    <Compile Include="Entities\RoomEntity.cs" />
+    <Compile Include="Entities\Enums\State.cs" />
+    <Compile Include="Entities\UserEntity.cs" />
     <Compile Include="EntityFramework\HotelContext.cs" />
     <Compile Include="EntityFramework\HotelDbInitializer.cs" />
-    <Compile Include="Interfaces\IRepository.cs" />
-    <Compile Include="Interfaces\IUnitOfWork.cs" />
+    <Compile Include="Repositories\Abstract\IRepository.cs" />
+    <Compile Include="Repositories\Abstract\IRoomRepository.cs" />
+    <Compile Include="Repositories\Abstract\IUserRepository.cs" />
+    <Compile Include="UnitOfWork\IUnitOfWork.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositories\Abstract\IOrderRepository.cs" />
     <Compile Include="Repositories\OrderRepository.cs" />
     <Compile Include="Repositories\RoomRepository.cs" />
-    <Compile Include="Repositories\UnitOfWork.cs" />
+    <Compile Include="UnitOfWork\UnitOfWork.cs" />
     <Compile Include="Repositories\UserRepository.cs" />
   </ItemGroup>
   <ItemGroup>
