--- a/Labs3-5/BLL/BLL.csproj
+++ b/Labs3-5/BLL/BLL.csproj
@@ -43,11 +43,20 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Entities\Abstract\BaseDTO.cs" />
+    <Compile Include="Entities\Abstract\IBaseDTO.cs" />
+    <Compile Include="Entities\OrderDTO.cs" />
+    <Compile Include="Entities\RoomDTO.cs" />
+    <Compile Include="Entities\UserDTO.cs" />
+    <Compile Include="Interfaces\IOrderService.cs" />
+    <Compile Include="Interfaces\IRoomService.cs" />
+    <Compile Include="Interfaces\IUserService.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
